# sfsig

./: Cargo.toml  README.md  RFC.md
src/: lib.rs  main.rs  messages.rs  superfox_csprng.rs
