[package]
name = "sfsig"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = { version = "0.4.2", features = ["std"] }
ark-ff = "0.4.2"
ark-std = "0.4.0"
clap = { version = "4.5.16", features = ["derive"] }
sha2 = "0.11.0-pre.4"
rand = "0.8.5"
hex = "0.4.3"
blst = "0.3.13"
ark-serialize = { version = "0.4.2", features = ["ark-serialize-derive", "derive"] }
ark-bn254 = "0.4.0"
chrono = "0.4.38"
blake3 = { version = "1.5.3", features = ["neon"] }
bitvec = "1.0.1"
