[package]
name = "sfsig"
version = "0.1.0"
edition = "2021"

[lib]
name = "sfsig"
path = "src/lib.rs"

[[bin]]
name = "sfsig"
path = "src/main.rs"

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = { version = "0.4.2", features = ["std"] }
ark-ff = "0.4.2"
ark-std = "0.4.0"
clap = { version = "4.5.16", features = ["derive"] }
sha2 = "0.11.0-pre.4"
rand = "0.8.5"
hex = "0.4.3"
blst = "0.3.13"
ark-serialize = { version = "0.4.2", features = ["ark-serialize-derive", "derive"] }
ark-bn254 = "0.4.0"
chrono = "0.4.38"
blake3 = { version = "1.5.3", features = ["neon"] }
bitvec = "1.0.1"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = "0.2.19"
num-integer = "0.1.46"
algebra = "0.2.0"
